--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <article class="profile card-2">
         <div class="header">
           <picture>
-            <img src="images/image-daniel.jpg" alt="" srcset="">
+            <img src="images/image-jonathan.jpg" alt="" srcset="">
           </picture>
            <div class="name">
             <p>   Jonathan Walters</p>
@@ -59,7 +59,7 @@
   <article class="profile card-3">
     <div class="header">
       <picture>
-        <img src="images/image-daniel.jpg" alt="" srcset="">
+        <img src="images/image-jeanette.jpg" alt="" srcset="">
       </picture>
        <div class="name">
         <p>   Jeanette Harmon</p>
@@ -77,7 +77,7 @@
   <article class="profile card-4">
     <div class="header">
       <picture>
-        <img src="images/image-daniel.jpg" alt="" srcset="">
+        <img src="images/image-patrick.jpg" alt="" srcset="">
       </picture>
        <div class="name">
         <p>    Patrick Abrams</p>
@@ -100,7 +100,7 @@
 <article class="profile card-5">
   <div class="header">
     <picture>
-      <img src="images/image-daniel.jpg" alt="" srcset="">
+      <img src="images/image-kira.jpg" alt="" srcset="">
     </picture>
      <div class="name">
       <p>   Kira Whittle</p>
